# MessageBus

./: .gitignore  CMakeLists.txt  LICENSE  README.md
CoreLib/include/: Base64.h  Directory.h  File.h  Logger.h  Responder.h  SignalHandler.h  StringEx.h  StringList.h
CoreLib/src/: Base64.c  Directory.c  File.c  Logger.c  Responder.c  SignalHandler.c  StringList.c
MessageBus/: CMakeLists.txt
MessageBus/include/: MessageBroker.h  Payload.h
MessageBus/src/: MessageBroker.c
MessageBusClient/: CMakeLists.txt
MessageBusClient/include/: MessageBusClient.h  MessageBusClient.hpp
MessageBusClient/src/: MessageBusClient.c  MessageBusClient.cpp
examples/: CMakeLists.txt
examples/Pumba/: CMakeLists.txt
examples/Pumba/include/: Payload.h
examples/Pumba/src/: MessageBusClient.c  Payload.c  Responder.c  StringList.c  main.c  main.cpp
examples/Timon/: CMakeLists.txt
examples/Timon/include/: MessageBusClient.h  Payload.h  Responder.h  StringList.h
examples/Timon/src/: MessageBusClient.c  main.c
include/: Base64.h  Directory.h  File.h  Logger.h  MessageBroker.h  MessageBus.h  Responder.h  SignalHandler.h  StringEx.h  StringList.h
src/: Logger.c  MessageBroker.c  MessageBus.c  Responder.c  SignalHandler.c  StringEx.c  StringList.c  main.c
